<?xml version="1.0"?>
<package format="2">
  <name>kubot_bringup</name>
  <version>1.0.1</version>
  <description>
  The kubot_bringup package
  </description>

  <author>KUBOT</author>
  <!-- KUBOT ROS  -->
  <maintainer email="YunHong.Wang@ShaYangYe.com">Yun-Hong</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>kubot_msgs</buildtool_depend>

  <export>
  </export>
</package>
