<?xml version="1.0"?>
<package format="2">
  <name>kubot_bringup</name>
  <version>1.0.1</version>
  <description>
  The kubot robot bringup package
  </description>

  <author>KUBOT</author>
  <!-- KUBOT ROS  -->
  <maintainer email="t105408001@ntut.org.tw">Yun-Hong</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>kubot_msgs</buildtool_depend>

  <export>
  </export>
</package>
